--- a/src/app/board-management/dialog-board-edit/dialog-board-edit.component.html
+++ b/src/app/board-management/dialog-board-edit/dialog-board-edit.component.html
@@ -2,31 +2,38 @@
     <div class="row">
         <h1>Editar informações gerais</h1>
     </div>
-    <div class="row">
-        <hr>
-    </div>
-    <div class="row">
-        <div style="padding-left: 0px;" class="col-sm-2">
-            <h3 style="padding-left: 0px;">Nome</h3>
+    <form #formBoardEdit="ngForm">
+        <div class="row">
+            <hr>
         </div>
-        <div class="col">
-            <input type="text" class="form-control" [(ngModel)]="board.name!">
+        <div class="row">
+            <div style="padding-left: 0px;" class="col-sm-2">
+                <h3 style="padding-left: 0px;">Nome</h3>
+            </div>
+            <div class="col">
+                <input type="text" class="form-control" [(ngModel)]="board.name!" name="name" #name="ngModel"
+                    minlength="5" required>
+                <div class="alert alert-danger" *ngIf="name.errors && (name.dirty || name.touched)">
+                    O nome do nome informado é inválido. (Deve conter no mínimo 5 caracteres)
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="row">
-        <h3 style="padding-left: 0px; margin-bottom: 0px;">Descrição</h3>
-    </div>
-    <div class="row">
-        <textarea style="padding-left: 10px;" class="form-control" id="textarea" rows="8"
-            [(ngModel)]="board.description"></textarea>
-    </div>
-    <div class="row" style="padding-bottom: 10px; padding-top: 30px">
-        <hr>
-    </div>
-    <div class="row" style="padding-bottom: 5px;">
-        <button type="button" class="btn btn-success" (click)="updateBoard()">Salvar</button>
-    </div>
-    <div class="row">
-        <button type="button" class="btn btn-secondary" (click)="closeDialog()">Cancelar</button>
-    </div>
+        <div class="row">
+            <h3 style="padding-left: 0px; margin-bottom: 0px;">Descrição</h3>
+        </div>
+        <div class="row">
+            <textarea style="padding-left: 10px;" class="form-control" id="textarea" rows="8" name="description"
+                [(ngModel)]="board.description"></textarea>
+        </div>
+        <div class="row" style="padding-bottom: 10px; padding-top: 30px">
+            <hr>
+        </div>
+        <div class="row" style="padding-bottom: 5px;">
+            <button type="button" [disabled]="formBoardEdit.form.invalid" class="btn btn-success"
+                (click)="updateBoard()">Salvar</button>
+        </div>
+        <div class="row">
+            <button type="button" class="btn btn-secondary" (click)="closeDialog()">Cancelar</button>
+        </div>
+    </form>
 </div>
