--- a/src/app/working-area/dialog-task-delivery-date/dialog-task-delivery-date.component.html
+++ b/src/app/working-area/dialog-task-delivery-date/dialog-task-delivery-date.component.html
@@ -2,37 +2,42 @@
     <div class="row">
         <h1>Configurar data de entrega</h1>
     </div>
-
-    <div class="col">
-        <div [hidden]="!task.deliveryDate!.active">
+    <form #formDeliveryDate="ngForm">
+        <div class="col">
+            <div [hidden]="!task.deliveryDate!.active">
+                <div class="row">
+                    <mat-card class="demo-inline-calendar-card">
+                        <mat-calendar [startAt]="initialDate()" ngDefaultControl [(selected)]="task.deliveryDate!.date"
+                            name="date" required>
+                        </mat-calendar>
+                    </mat-card>
+                </div>
+                <div class="row" style="padding-top: 10px;">
+                    <label style="padding-left: 0px;">Horário de entrega</label>
+                    <ng-select name="estado" [items]="availableNotificationTimes" [clearable]="false"
+                        [(ngModel)]="task.deliveryDate!.time" placeholder="Selecione o horário de entrega"
+                        style="padding: 0%;" required>
+                    </ng-select>
+                    <div class="alert alert-danger" *ngIf="formDeliveryDate.form.invalid">
+                        A data e horário de entrega devem ser preenchidos.
+                    </div>
+                </div>
+            </div>
+            <br>
             <div class="row">
-                <mat-card class="demo-inline-calendar-card">
-                    <mat-calendar [startAt]="initialDate()" ngDefaultControl [(selected)]="task.deliveryDate!.date"
-                        name="date">
-                    </mat-calendar>
-                </mat-card>
+                <mat-checkbox [color]="color" [(ngModel)]="task.deliveryDate!.active" name="active">Data de entrega
+                    ativa
+                </mat-checkbox>
             </div>
-            <div class="row" style="padding-top: 10px;">
-                <label style="padding-left: 0px;">Horário de entrega</label>
-                <ng-select name="estado" [items]="availableNotificationTimes" [clearable]="false"
-                    [(ngModel)]="task.deliveryDate!.time" placeholder="Selecione o horário de entrega"
-                    style="padding: 0%;">
-                </ng-select>
+            <div class="row">
+                <hr>
+            </div>
+            <div class="row">
+                <button mat-flat-button color="warn"
+                    [disabled]="task.deliveryDate!.active && formDeliveryDate.form.invalid"
+                    (click)="updateDeliveryDate()">Salvar</button>
+                <button mat-stroked-button color="warn" (click)="closeDialog()">Cancelar</button>
             </div>
         </div>
-        <br>
-        <div class="row">
-            <mat-checkbox [color]="color" [(ngModel)]="task.deliveryDate!.active" name="active">Data de entrega
-                ativa
-            </mat-checkbox>
-        </div>
-
-        <div class="row">
-            <hr>
-        </div>
-        <div class="row">
-            <button mat-flat-button color="warn" (click)="updateDeliveryDate()">Salvar</button>
-            <button mat-stroked-button color="warn" (click)="closeDialog()">Cancelar</button>
-        </div>
-    </div>
+    </form>
 </div>
