Modal to Dialog on StackEdit and new dialog to delete stacks

--- a/src/app/working-area/board-panel/board-panel.component.html
+++ b/src/app/working-area/board-panel/board-panel.component.html
@@ -9,7 +9,7 @@
                             class="bi bi-arrow-left-square"></i></button>
                     <div class="col">
                         <p class="col" style="text-align: center; margin-bottom: 0px;"><b>{{stack.name}}</b>&nbsp;&nbsp;
-                            <button (click)="openModalStackUpdate(stack)"><i class="bi bi-pencil-fill"></i></button>
+                            <button (click)="openDialogStackUpdate(stack)"><i class="bi bi-pencil-fill"></i></button>
                             <button (click)="openModalNewTask(stack.id)"><i
                                     class="bi bi-plus-square-dotted"></i></button>
                         </p>
