--- a/src/app/board-management/dialog-members-management/dialog-members-management.component.html
+++ b/src/app/board-management/dialog-members-management/dialog-members-management.component.html
@@ -12,10 +12,18 @@
                 <div class="col" style="overflow-y:scroll;overflow-x:hidden; height: 240px;">
                     <ul class="list-group">
                         <li class="list-group-item" *ngFor="let user of board.memberList" style="padding-right: 0px;">
-                            <label style="margin-right: 44%;">{{ user.username }} - {{
-                                user.email }}</label><button type="button" class="btn btn-secondary"
-                                [disabled]="board.owner!.id! == user.id! " style="align-self: flex-end;"
-                                (click)="openDialogMemberDelete(user)"><i class="bi bi-person-x-fill"></i></button>
+                            <div class="row">
+                                <div class="col-md-8">
+                                    <label>{{ user.username }} - {{
+                                        user.email }}</label>
+                                </div>
+                                <div class="col-auto">
+                                    <button type="button" class="btn btn-secondary"
+                                        [disabled]="board.owner!.id! == user.id! " style="align-self: flex-end;"
+                                        (click)="openDialogMemberDelete(user)"><i
+                                            class="bi bi-person-x-fill"></i></button>
+                                </div>
+                            </div>
                         </li>
                     </ul>
                 </div>
