Solving UI bugs

--- a/src/app/board-management/board-accept-invite/board-accept-invite.component.html
+++ b/src/app/board-management/board-accept-invite/board-accept-invite.component.html
@@ -12,11 +12,10 @@
         <h1 style="font-size: 50px;">Convite validado</h1>
         <p style="font-size: 25px;">O convite foi validado com sucesso. Para ter acesso ao board entre na plataforma
             TaskManager e
-            filtre por "Quadros que sou membro".</p>
-        <p style="font-size: 25px;"><b>Você será redirecionado a página de login em 8 segundos</b></p>
+            filtre por "<b>Quadros que sou membro</b>".</p>
+        <p style="font-size: 25px;"><b>Você será redirecionado a página de login em poucos segundos.</b></p>
     </div>
-
-
+    
     <div class="row text-center" *ngIf="!isCheckingInvite && isInviteInvalid"
         style="padding-top: 20px; padding-bottom: 15px; border-style: solid; border-radius: 50px; background-color: rgb(185, 131, 131); opacity: 0.8;">
         <h1 style="font-size: 50px;">Convite inválido</h1>
