--- a/src/app/working-area/dialog-task-delivery-date/dialog-task-delivery-date.component.html
+++ b/src/app/working-area/dialog-task-delivery-date/dialog-task-delivery-date.component.html
@@ -22,6 +22,11 @@
                         A data e horário de entrega devem ser preenchidos.
                     </div>
                 </div>
+                <br>
+                <div class="row">
+                    <p>30 minutos antes da data de entrega, um e-mail será enviado para todos os membros da tarefa. O
+                        corpo e título do e-mail podem ser configurados nas <b>Configurações de notificações</b>.</p>
+                </div>
             </div>
             <br>
             <div class="row">
