Ng2-charts inclusion: Application forms. Stack Tasks Count

--- a/src/app/board-management/dialog-general-management/dialog-general-management.component.html
+++ b/src/app/board-management/dialog-general-management/dialog-general-management.component.html
@@ -4,14 +4,15 @@
     </div>
     <div class="col">
         <div class="row" style="padding-bottom: 5px;">
-            <button type="button" class="btn btn-secondary" (click)="openDialogMembersManagement()">Gerenciar membros</button>
+            <button type="button" class="btn btn-secondary" (click)="openDialogMembersManagement()">Gerenciar
+                membros</button>
         </div>
         <div class="row" style="padding-bottom: 5px;">
             <button type="button" class="btn btn-secondary" (click)="openDialogBoardEdit()">Editar informações
                 gerais</button>
         </div>
         <div class="row" style="padding-bottom: 15px;">
-            <button type="button" class="btn btn-secondary">Visualizar relatórios</button>
+            <button type="button" class="btn btn-secondary" (click)="openDialogFormTab()">Visualizar relatórios</button>
         </div>
         <div class="row">
             <hr>
