New form: Overdue tasks by stack

--- a/src/app/board-management/dialog-form-tab/dialog-form-tab.component.html
+++ b/src/app/board-management/dialog-form-tab/dialog-form-tab.component.html
@@ -1,11 +1,10 @@
 <div class="container-fluid" style="width: 1350px; height: 700px;">
     <mat-tab-group>
-        <mat-tab label="Stacks X Tasks">
+        <mat-tab label="Tarefas por Stacks">
             <app-form-stack-tasks-count></app-form-stack-tasks-count>
         </mat-tab>
-        <mat-tab label="Second">
-            Second Tab
+        <mat-tab label="Tarefas atrasadas por Stacks">
+            <app-form-overdue-tasks-count></app-form-overdue-tasks-count>
         </mat-tab>
-        <mat-tab label="Third"> Third tab </mat-tab>
     </mat-tab-group>
 </div>
