Using PieChart instead of bar on OverDueTasksForm and changing scale of BarChart to ignore decimal

--- a/src/app/board-management/dialog-form-tab/dialog-form-tab.component.html
+++ b/src/app/board-management/dialog-form-tab/dialog-form-tab.component.html
@@ -4,7 +4,8 @@
             <app-form-stack-tasks-count></app-form-stack-tasks-count>
         </mat-tab>
         <mat-tab label="Tarefas atrasadas por Stacks">
-            <app-form-overdue-tasks-count></app-form-overdue-tasks-count>
+            <app-form-overdue-tasks-count>
+            </app-form-overdue-tasks-count>
         </mat-tab>
     </mat-tab-group>
 </div>
