--- a/src/app/board-management/form-overdue-tasks-count/form-overdue-tasks-count.component.html
+++ b/src/app/board-management/form-overdue-tasks-count/form-overdue-tasks-count.component.html
@@ -1,4 +1,5 @@
 <div>
-    <canvas baseChart [data]="barChartData" [options]="barChartOptions" [legend]="barChartLegend" [type]="'bar'">
+    <canvas class="col" baseChart [data]="pieChartData" [options]="pieChartOptions" [legend]="pieChartLegend"
+        [type]="'pie'" [height]="650" [width]="650" style="margin: auto;">
     </canvas>
 </div>
