Calling endpoint to start a password reset request

--- a/src/app/user-management/dialog-forgot-password/dialog-forgot-password.component.html
+++ b/src/app/user-management/dialog-forgot-password/dialog-forgot-password.component.html
@@ -8,14 +8,15 @@
     </div>
     <div class="row">
         <p>Email</p>
-        <input type="text" class="form-control" name="email" #email required>
+        <input type="text" class="form-control" name="email" #email="ngModel" [(ngModel)]="user.email" required>
     </div>
     <div class="row">
         <p>Caso o e-mail seja válido, serão enviadas instruções para a criação de uma nova senha.</p>
     </div>
     <br>
     <div class="row">
-        <button type="submit" class="btn btn-secondary" [disabled]="email != undefined && !email.value.includes('@')"
+        <button type="submit" class="btn btn-secondary"
+            [disabled]="email != undefined && email.value != null && !email.value.includes('@')"
             (click)="sendRecuperationEmail()">Enviar e-mail de
             recuperação</button>
         <p></p>
