Changing default board image background icon

--- a/src/app/board-management/board-list/board-list.component.html
+++ b/src/app/board-management/board-list/board-list.component.html
@@ -9,7 +9,7 @@
         </select>
         <div class="card" style="margin: 10px; width: 18rem; background-color: rgb(206, 223, 238);"
             *ngFor="let board of filterBoardList()">
-            <img src="../../../assets/BoardDefaultImage.png" class="card-img-top" alt="...">
+            <img src="../../../assets/BoardBackgroundCard.jpg" class="card-img-top" style="width: 90%; align-self: center; margin-top: 8%;" alt="...">
             <div class="card-body">
                 <h1>{{board.name}}</h1>
                 <p>{{board.description}}</p>
